// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COMPONENT - Characters Robot > renders confusion marks and flower if female whale is in default pose 1`] = `
.c0 {
  padding: 0 0 3rem 0;
  position: relative;
  animation: k0 5s ease-in-out infinite;
}

@media (max-width: 31.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

@keyframes k0 {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-20px);
  }

  100% {
    transform: translateY(0);
  }
}

<div>
  <div
    class="c0"
  >
    <mock-animated-whale-shadow />
    <mock-whale-artwork
      pose="default"
    />
    <mock-confusion-marks />
    <mock-gender-flower
      isvisible=""
    />
  </div>
</div>
`;

exports[`COMPONENT - Characters Robot > renders confusion marks if whale is in default pose 1`] = `
.c0 {
  padding: 0 0 3rem 0;
  position: relative;
  animation: k0 5s ease-in-out infinite;
}

@media (max-width: 31.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

@keyframes k0 {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-20px);
  }

  100% {
    transform: translateY(0);
  }
}

<div>
  <div
    class="c0"
  >
    <mock-animated-whale-shadow />
    <mock-whale-artwork
      pose="default"
    />
    <mock-confusion-marks />
    <mock-gender-flower />
  </div>
</div>
`;

exports[`COMPONENT - Characters Robot > renders correctly with default props 1`] = `
.c0 {
  padding: 0 0 3rem 0;
  position: relative;
  animation: k0 5s ease-in-out infinite;
}

@media (max-width: 31.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

@keyframes k0 {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-20px);
  }

  100% {
    transform: translateY(0);
  }
}

<div>
  <div
    class="c0"
  >
    <mock-animated-whale-shadow />
    <mock-whale-artwork
      pose="default"
    />
    <mock-confusion-marks />
    <mock-gender-flower />
  </div>
</div>
`;

exports[`COMPONENT - Characters Robot > renders flower if female gender is passed 1`] = `
.c0 {
  padding: 0 0 3rem 0;
  position: relative;
  animation: k0 5s ease-in-out infinite;
}

@media (max-width: 31.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

@keyframes k0 {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-20px);
  }

  100% {
    transform: translateY(0);
  }
}

<div>
  <div
    class="c0"
  >
    <mock-animated-whale-shadow />
    <mock-whale-artwork
      pose="default"
    />
    <mock-confusion-marks />
    <mock-gender-flower
      isvisible=""
    />
  </div>
</div>
`;
